--- a/src/app/components/add-item/add-item.component.css
+++ b/src/app/components/add-item/add-item.component.css
@@ -15,3 +15,18 @@ form input[type=text]{
     width: 100%;
     padding: 5px;
 }
+
+.action-button{
+  border: none;
+  font-size: 20px;
+  background-color: green;
+  color: white;
+  padding: 5px;
+  width: 50%;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.action-button:hover{
+  background-color: darkgreen;
+}
