--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -9,9 +9,16 @@ menu ul{
     padding: 0;
     list-style: none;
 }
-menu ul li a{
+
+menu img{
+  height: 40px;
+  padding-left: 70px;
+  cursor: pointer;
+}
+
+ul li a{
     display: block;
     color: white;
     text-decoration: none;
-    padding: 10px 15px;
+    padding: 10px 10px;
 }
