--- a/src/app/components/shopping-item/shopping-item.component.css
+++ b/src/app/components/shopping-item/shopping-item.component.css
@@ -50,6 +50,7 @@ div{
     padding: 5px;
     width: 100%;
     box-sizing: border-box;
+    cursor: pointer;
 }
 .actions button:hover{
     background-color: darkred;
